New features added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=GTP-managemet-app-Backend
 spring.data.mongodb.uri=mongodb+srv://emmanueltweneboah91:6kxcdG0LVKc2pyFv@cluster0.joqratf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=GTP-MGTdb
+spring.mail.host=smtp.gmail.com
+
+server.port=5000
 #spring.data.mongodb.auto-index-creation=true
