--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,11 @@
 		<tag/>
 		<url/>
 	</scm>
+<!--	<properties>-->
+<!--		<java.version>22</java.version>-->
+<!--	</properties>-->
 	<properties>
-		<java.version>22</java.version>
+		<java.version>17</java.version> <!-- Or another supported version like 17 -->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -147,12 +150,25 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.13.0</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<source>17</source> <!-- Or another supported version like 17 -->
+					<target>17</target> <!-- Or another supported version like 17 -->
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 
 
 </project>
